// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expert App tests should display a list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
    <GifGrid
      category="Genshin Impact"
      key="Genshin Impact"
    />
  </ol>
</Fragment>
`;

exports[`Expert App tests should match component snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
